content/boomerang-flow/3.6.0/getting-to-know/05.schedules.md
---
title: Insights
index: 4
---

# Schedules

> **Note**: Schedules is currently in **beta**.

A centralised place to manage all Schedules for all your Workflows in one location with the occurences of these Schedules visible on a Calendar. You can also view Schedules specific for a Workflow in the Workflow Editor Schedules tab.

Schedules allow you to 
- trigger a Workflow one time or recurring
- define the parameters to be passed to the Workflow
- define multiple concurrent times for a Workflow to run 

Schedules can be paused individually or the Schedule trigger can be disabled which will pause all Schedules. If the Schedule trigger is disabled, when enabled again it will only enable those Schedules that were previously active, respecting all prior pauses.

![Schedules](./assets/img/schedules-home.png)

## Filters

You can filter by a combination of Scope, Team, Workflow, Status, or Date range.

## Type

There are three types of Schedule: 
- Run Once: you select a date and time in the future
- Recurring: the time, timezone and which days to run
- Recurring via cron expression: the cron expression and timezone.

## System Task

There is a System Task that allows you to create a Run Once Schedule in the future. See [Getting To Know Tasks](/docs/boomerang-flow/getting-to-know/tasks) for more detailed inforamtion.